<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_mood"
        android:icon="@drawable/ic_mood"
        android:title="@string/title_mood" />
        
    <item
        android:id="@+id/navigation_habits"
        android:icon="@drawable/ic_habits"
        android:title="@string/title_habits" />

    <item
        android:id="@+id/navigation_hydration"
        android:icon="@drawable/ic_hydration"
        android:title="@string/title_hydration" />

<!--    <item-->
<!--        android:id="@+id/navigation_settings"-->
<!--        android:icon="@drawable/ic_settings"-->
<!--        android:title="@string/title_settings" />-->
</menu>